[package]
name = "yunting_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tokio = { version = "1.48", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
md-5 = "0.11.0-rc.3"
base16ct = { version = "0.3", features = ["alloc"] }
log = "0.4"
thiserror = "2"